# fix-demo

./: .gitignore  README.md  default.nix  flake.nix  pyfix.nix
client/: client_settings.cfg  fix-client.nix  setup.py
client/app/: client.py  client_settings.cfg
server/: .envrc  CMakeLists.txt  fix-server.nix  logic.py  main.cpp  server_settings.cfg
server/src/: CMakeLists.txt  main.cpp  persistent-data.hpp  price-server.hpp  python-call.hpp  test.cpp  utils.hpp
web/: fix-web.nix  package-lock.json  package.json  tailwind.config.ts
web/src/routes/: +page.svelte
web/src/routes/dashboard/: +page.server.ts  +page.svelte
